Prevent left side of <svg> from getting cut off when zooming in.

--- a/app.css
+++ b/app.css
@@ -59,3 +59,13 @@ div[contenteditable] {
 #status-message {
   background-color: #ffffee;
 }
+
+.zoom-protect-container {
+  margin-left: 1em;
+  display: flex;
+  width: 100%;
+}
+
+.gutter {
+  width: 1em;
+}
